Fixed offset banner text on small screens

--- a/app.css
+++ b/app.css
@@ -4,7 +4,7 @@ HEADER
  */
 #banner {
     text-align: center;
-    padding: 100px;
+    padding: 100px 0;
 }
 /*
 ========================================================================================================================
